--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Movie DB</title>
 </head>
 <body>
+<!-- Templates -->
+    <script type="text/template" id="movie">
+        <div class="rating"><%- rating %></div>
+        <figure>
+            <img src="<%- img %>" alt="<%- name %>"/>
+        </figure>
+        <h4><%- title %></h4>
+    </script>
     <header>
         <nav>
             <ul>
