add some styles

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Movies DB</title>
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
-<body>
-<div class="container" data-ng-controller="mainController">
+<body data-ng-controller="mainController">
+<div class="container">
     <div ng-repeat="item in data" class="item_film" ng-click="getFilm({id: item.id})" ng-mouseover="onHover()" ng-mouseleave="onOut()">
         <figure>
             <img data-ng-src="{{pathImg + item.poster_path}}" alt="{{item.title}}"/>
@@ -15,18 +15,19 @@
         <div class="rating" data-ng-show="mouseHover">{{item.vote_average}}</div>
         <div class="title">{{item.title}}</div>
     </div>
+    <pre>{{active | json}}</pre>
 </div>
-<div class="active_pop">
-    <i class="close_active">x</i>
-    <div class="left_row">
-        <figure>
-            <img ng-src="{{pathImg_1280 + active.poster_path}}" alt="active.title"/>
-        </figure>
-        <div class="active_pop__title">{{active.title}}</div>
-    </div>
-    <div class="right_row">
-
-    </div>
+<div class="active_pop" data-ng-show="toggleFilm">
+    <i class="close_active" ng-click="hideFilm()">x</i>
+    <section class="active_pop__info">
+        <div class="left_row">
+            <figure class="active_pop__poster">
+                <img ng-src="{{pathImg_1280 + active.poster_path}}" alt="active.title"/>
+            </figure>
+            <div class="active_pop__title">{{active.title}}</div>
+        </div>
+        <div class="right_row"></div>
+    </section>
 </div>
 </body>
 <script src="./bundle.js"></script>
