add bg for film preview

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="title">{{item.title}}</div>
     </div>
 </div>
-<div class="active_pop" data-ng-show="toggleFilm" data-bg-film>
+<div class="active_pop" data-ng-show="toggleFilm" ng-style="styleObj">
     <i class="close_active" ng-click="hideFilm()">x</i>
     <section class="active_pop__info">
         <div class="left_row">
